--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 
     <build>
         <pluginManagement>
+            <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
